--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6049,42 +6049,42 @@ body {
   display: flex;
   flex-direction: column-reverse;
 }
-.cid-rDr1VzC3a0 {
+.cid-rDxrDEGOZP {
   padding-top: 90px;
   padding-bottom: 90px;
   background-image: url("../../../assets/images/images-1-712x431.jpg");
 }
-.cid-rDr1VzC3a0 .media-container-row {
+.cid-rDxrDEGOZP .media-container-row {
   flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
 }
 @media (min-width: 992px) {
-  .cid-rDr1VzC3a0 .mbr-figure {
+  .cid-rDxrDEGOZP .mbr-figure {
     padding-right: 4rem;
     padding-right: 0;
     padding-left: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-rDr1VzC3a0 .mbr-figure {
+  .cid-rDxrDEGOZP .mbr-figure {
     padding-bottom: 3rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rDr1VzC3a0 .mbr-text {
+  .cid-rDxrDEGOZP .mbr-text {
     text-align: center;
   }
 }
-.cid-rDpMS8aEA1 {
+.cid-rDxrDVTgnM {
   padding-top: 45px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-rDpMS8aEA1 .mbr-section-subtitle {
+.cid-rDxrDVTgnM .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
-.cid-rDpMS8aEA1 .number-wrap {
+.cid-rDxrDVTgnM .number-wrap {
   color: #4f4943;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
@@ -6096,7 +6096,7 @@ body {
   border-radius: 2px;
   max-width: 100%;
 }
-.cid-rDpMS8aEA1 .number {
+.cid-rDxrDVTgnM .number {
   font-style: normal;
   font-weight: 700;
   font-size: 55px;
@@ -6106,12 +6106,12 @@ body {
   line-height: 1.3;
   color: #232323;
 }
-.cid-rDpMS8aEA1 .period {
+.cid-rDxrDVTgnM .period {
   display: block;
   padding-top: 2px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.cid-rDpMS8aEA1 .dot {
+.cid-rDxrDVTgnM .dot {
   position: absolute;
   top: -10px;
   right: -1em;
@@ -6128,75 +6128,75 @@ body {
   word-spacing: 0;
   color: #232323;
 }
-.cid-rDpMS8aEA1 .countdown-cont {
+.cid-rDxrDVTgnM .countdown-cont {
   max-width: 700px;
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-rDpMS8aEA1 .dot {
+  .cid-rDxrDVTgnM .dot {
     display: none;
   }
 }
 @media (max-width: 543px) {
-  .cid-rDpMS8aEA1 .number-wrap {
+  .cid-rDxrDVTgnM .number-wrap {
     margin-bottom: 15px;
   }
 }
 @media (max-width: 550px) {
-  .cid-rDpMS8aEA1 .col-xs-3 {
+  .cid-rDxrDVTgnM .col-xs-3 {
     padding-left: 0;
     padding-right: 0;
     max-width: 25%;
     flex: 0 0 25%;
   }
-  .cid-rDpMS8aEA1 .number-wrap {
+  .cid-rDxrDVTgnM .number-wrap {
     min-width: auto;
   }
 }
 @media (max-width: 440px) {
-  .cid-rDpMS8aEA1 .number,
-  .cid-rDpMS8aEA1 .dot {
+  .cid-rDxrDVTgnM .number,
+  .cid-rDxrDVTgnM .dot {
     font-size: 40px;
   }
 }
 @media (max-width: 380px) {
-  .cid-rDpMS8aEA1 .period {
+  .cid-rDxrDVTgnM .period {
     font-size: 0.8rem;
   }
 }
-.cid-rDv4guRkCr {
+.cid-rDxrEhMgCl {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-rDv4guRkCr .content {
+  .cid-rDxrEhMgCl .content {
     text-align: center;
   }
-  .cid-rDv4guRkCr .content > div:not(:last-child) {
+  .cid-rDxrEhMgCl .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-rDv4guRkCr .img-logo img {
+.cid-rDxrEhMgCl .img-logo img {
   height: 6rem;
 }
-.cid-rDv4guRkCr .form-group,
-.cid-rDv4guRkCr .input-group-btn {
+.cid-rDxrEhMgCl .form-group,
+.cid-rDxrEhMgCl .input-group-btn {
   padding: 0;
 }
-.cid-rDv4guRkCr .form-control {
+.cid-rDxrEhMgCl .form-control {
   font-size: .75rem;
   text-align: center;
   min-width: 150px;
 }
-.cid-rDv4guRkCr .input-group-btn .btn {
+.cid-rDxrEhMgCl .input-group-btn .btn {
   padding: .75rem 1.5625rem !important;
   margin-left: .625rem;
   text-transform: none;
   color: #fff;
   text-align: center;
 }
-.cid-rDv4guRkCr .social-list {
+.cid-rDxrEhMgCl .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -6204,53 +6204,53 @@ body {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.cid-rDv4guRkCr .social-list .mbr-iconfont-social {
+.cid-rDxrEhMgCl .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rDv4guRkCr .social-list .soc-item {
+.cid-rDxrEhMgCl .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rDv4guRkCr .social-list a {
+.cid-rDxrEhMgCl .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rDv4guRkCr .social-list a:hover {
+.cid-rDxrEhMgCl .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rDv4guRkCr .social-list {
+  .cid-rDxrEhMgCl .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
 @media (max-width: 767px) {
-  .cid-rDv4guRkCr .footer-lower .copyright {
+  .cid-rDxrEhMgCl .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rDv4guRkCr .footer-lower hr {
+.cid-rDxrEhMgCl .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rDv4guRkCr .form-group {
+.cid-rDxrEhMgCl .form-group {
   margin: 0;
 }
 @media (max-width: 767px) {
-  .cid-rDv4guRkCr .foot-logo {
+  .cid-rDxrEhMgCl .foot-logo {
     text-align: center !important;
   }
-  .cid-rDv4guRkCr .foot-title {
+  .cid-rDxrEhMgCl .foot-title {
     text-align: center !important;
   }
-  .cid-rDv4guRkCr .mbr-text {
+  .cid-rDxrEhMgCl .mbr-text {
     text-align: center !important;
   }
-  .cid-rDv4guRkCr .form-group {
+  .cid-rDxrEhMgCl .form-group {
     margin: 0;
   }
 }
@@ -6752,42 +6752,42 @@ body {
   display: flex;
   flex-direction: column-reverse;
 }
-.cid-rDpuNXPcSv {
+.cid-rDxsB4lOvH {
   padding-top: 90px;
   padding-bottom: 90px;
   background-image: url("../../../assets/images/images-1-712x431.jpg");
 }
-.cid-rDpuNXPcSv .media-container-row {
+.cid-rDxsB4lOvH .media-container-row {
   flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
 }
 @media (min-width: 992px) {
-  .cid-rDpuNXPcSv .mbr-figure {
+  .cid-rDxsB4lOvH .mbr-figure {
     padding-right: 4rem;
     padding-right: 0;
     padding-left: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-rDpuNXPcSv .mbr-figure {
+  .cid-rDxsB4lOvH .mbr-figure {
     padding-bottom: 3rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rDpuNXPcSv .mbr-text {
+  .cid-rDxsB4lOvH .mbr-text {
     text-align: center;
   }
 }
-.cid-rDpLLARd39 {
-  padding-top: 30px;
-  padding-bottom: 105px;
+.cid-rDxsBqHWoj {
+  padding-top: 45px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-rDpLLARd39 .mbr-section-subtitle {
+.cid-rDxsBqHWoj .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
-.cid-rDpLLARd39 .number-wrap {
+.cid-rDxsBqHWoj .number-wrap {
   color: #4f4943;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
@@ -6799,7 +6799,7 @@ body {
   border-radius: 2px;
   max-width: 100%;
 }
-.cid-rDpLLARd39 .number {
+.cid-rDxsBqHWoj .number {
   font-style: normal;
   font-weight: 700;
   font-size: 55px;
@@ -6809,12 +6809,12 @@ body {
   line-height: 1.3;
   color: #232323;
 }
-.cid-rDpLLARd39 .period {
+.cid-rDxsBqHWoj .period {
   display: block;
   padding-top: 2px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.cid-rDpLLARd39 .dot {
+.cid-rDxsBqHWoj .dot {
   position: absolute;
   top: -10px;
   right: -1em;
@@ -6831,75 +6831,75 @@ body {
   word-spacing: 0;
   color: #232323;
 }
-.cid-rDpLLARd39 .countdown-cont {
+.cid-rDxsBqHWoj .countdown-cont {
   max-width: 700px;
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-rDpLLARd39 .dot {
+  .cid-rDxsBqHWoj .dot {
     display: none;
   }
 }
 @media (max-width: 543px) {
-  .cid-rDpLLARd39 .number-wrap {
+  .cid-rDxsBqHWoj .number-wrap {
     margin-bottom: 15px;
   }
 }
 @media (max-width: 550px) {
-  .cid-rDpLLARd39 .col-xs-3 {
+  .cid-rDxsBqHWoj .col-xs-3 {
     padding-left: 0;
     padding-right: 0;
     max-width: 25%;
     flex: 0 0 25%;
   }
-  .cid-rDpLLARd39 .number-wrap {
+  .cid-rDxsBqHWoj .number-wrap {
     min-width: auto;
   }
 }
 @media (max-width: 440px) {
-  .cid-rDpLLARd39 .number,
-  .cid-rDpLLARd39 .dot {
+  .cid-rDxsBqHWoj .number,
+  .cid-rDxsBqHWoj .dot {
     font-size: 40px;
   }
 }
 @media (max-width: 380px) {
-  .cid-rDpLLARd39 .period {
+  .cid-rDxsBqHWoj .period {
     font-size: 0.8rem;
   }
 }
-.cid-rDv4jmtTkM {
+.cid-rDxsBJ6dDz {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-rDv4jmtTkM .content {
+  .cid-rDxsBJ6dDz .content {
     text-align: center;
   }
-  .cid-rDv4jmtTkM .content > div:not(:last-child) {
+  .cid-rDxsBJ6dDz .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-rDv4jmtTkM .img-logo img {
+.cid-rDxsBJ6dDz .img-logo img {
   height: 6rem;
 }
-.cid-rDv4jmtTkM .form-group,
-.cid-rDv4jmtTkM .input-group-btn {
+.cid-rDxsBJ6dDz .form-group,
+.cid-rDxsBJ6dDz .input-group-btn {
   padding: 0;
 }
-.cid-rDv4jmtTkM .form-control {
+.cid-rDxsBJ6dDz .form-control {
   font-size: .75rem;
   text-align: center;
   min-width: 150px;
 }
-.cid-rDv4jmtTkM .input-group-btn .btn {
+.cid-rDxsBJ6dDz .input-group-btn .btn {
   padding: .75rem 1.5625rem !important;
   margin-left: .625rem;
   text-transform: none;
   color: #fff;
   text-align: center;
 }
-.cid-rDv4jmtTkM .social-list {
+.cid-rDxsBJ6dDz .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -6907,53 +6907,53 @@ body {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.cid-rDv4jmtTkM .social-list .mbr-iconfont-social {
+.cid-rDxsBJ6dDz .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rDv4jmtTkM .social-list .soc-item {
+.cid-rDxsBJ6dDz .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rDv4jmtTkM .social-list a {
+.cid-rDxsBJ6dDz .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rDv4jmtTkM .social-list a:hover {
+.cid-rDxsBJ6dDz .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rDv4jmtTkM .social-list {
+  .cid-rDxsBJ6dDz .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
 @media (max-width: 767px) {
-  .cid-rDv4jmtTkM .footer-lower .copyright {
+  .cid-rDxsBJ6dDz .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rDv4jmtTkM .footer-lower hr {
+.cid-rDxsBJ6dDz .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rDv4jmtTkM .form-group {
+.cid-rDxsBJ6dDz .form-group {
   margin: 0;
 }
 @media (max-width: 767px) {
-  .cid-rDv4jmtTkM .foot-logo {
+  .cid-rDxsBJ6dDz .foot-logo {
     text-align: center !important;
   }
-  .cid-rDv4jmtTkM .foot-title {
+  .cid-rDxsBJ6dDz .foot-title {
     text-align: center !important;
   }
-  .cid-rDv4jmtTkM .mbr-text {
+  .cid-rDxsBJ6dDz .mbr-text {
     text-align: center !important;
   }
-  .cid-rDv4jmtTkM .form-group {
+  .cid-rDxsBJ6dDz .form-group {
     margin: 0;
   }
 }
