create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1414,13 +1414,13 @@ body {
   box-shadow: none !important;
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -1511,7 +1511,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1815,7 +1815,7 @@ body {
 .cid-rDpLaO8ob5 {
   padding-top: 105px;
   padding-bottom: 45px;
-  background-color: #333333;
+  background-color: #635a51;
 }
 .cid-rDpLaO8ob5 H1 {
   text-align: left;
@@ -1949,7 +1949,7 @@ body {
 .cid-rDARPf8Yz0 {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #2e2e2e;
+  background-color: #635a51;
 }
 @media (max-width: 767px) {
   .cid-rDARPf8Yz0 .content {
@@ -2037,13 +2037,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -2134,7 +2134,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2739,13 +2739,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -2836,7 +2836,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3402,13 +3402,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -3499,7 +3499,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4105,13 +4105,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -4202,7 +4202,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4808,13 +4808,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -4905,7 +4905,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -5511,13 +5511,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -5608,7 +5608,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -6214,13 +6214,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -6311,7 +6311,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -6917,13 +6917,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -7014,7 +7014,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -7620,13 +7620,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -7717,7 +7717,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -8323,13 +8323,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -8420,7 +8420,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -9026,13 +9026,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -9123,7 +9123,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -9729,13 +9729,13 @@ body {
   }
 }
 .cid-rDoTdQ57Cw .navbar {
-  background: #333333;
+  background: #635a51;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rDoTdQ57Cw .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #635a51;
 }
 .cid-rDoTdQ57Cw a {
   font-style: normal;
@@ -9826,7 +9826,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rDoTdQ57Cw .dropdown .dropdown-menu {
-  background: #333333;
+  background: #635a51;
   display: none;
   position: absolute;
   min-width: 5rem;
